--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "techblogcore-vue",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@types/marked": "^4.0.7",
+    "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
     "element-plus": "^2.2.22",
     "highlight.js": "^11.6.0",
     "lodash-es": "^4.17.21",
+    "markdown-to-txt": "^2.0.1",
     "marked": "^4.2.3",
     "node-sass": "^8.0.0",
     "sass-loader": "^13.2.0",
