--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-to-txt": "^2.0.1",
     "marked": "^4.2.3",
     "node-sass": "^8.0.0",
+    "pinia": "^2.0.27",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "vue": "^3.2.38",
