--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@types/marked": "^4.0.7",
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
