--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/marked": "^4.0.7",
     "@vueuse/core": "^9.6.0",
     "axios": "^1.1.3",
-    "element-plus": "^2.2.22",
+    "element-plus": "^2.2.28",
     "highlight.js": "^11.6.0",
     "lodash-es": "^4.17.21",
     "markdown-to-txt": "^2.0.1",
@@ -36,6 +36,8 @@
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.56.1",
     "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
     "vite": "^3.0.9",
     "vue-tsc": "^0.40.7"
   }
