--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@types/marked": "^4.0.8",
+    "@types/marked": "^5.0.0",
     "@vueuse/core": "^9.9.0",
     "axios": "^1.1.3",
     "element-plus": "^2.3.2",
     "highlight.js": "^11.7.0",
     "lodash-es": "^4.17.21",
     "markdown-to-txt": "^2.0.1",
-    "marked": "^4.3.0",
+    "marked": "^5.1.0",
+    "marked-katex-extension": "^2.1.0",
     "pinia": "^2.0.28",
     "style-loader": "^3.3.1",
     "vue": "^3.2.47",
