Add view transition to dark theme.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@types/dom-view-transitions": "^1.0.4",
     "@types/marked": "^5.0.0",
     "@vueuse/core": "^9.9.0",
     "axios": "^1.1.3",
