--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "pug-html-loader": "^1.1.5",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.77.8",
-    "typescript": "~4.7.4",
+    "typescript": "^5.7.3",
     "unplugin-auto-import": "^0.12.2",
     "unplugin-vue-components": "^0.22.12",
     "vite": "^3.2.10",
